品牌管理功能代码风格优化

--- a/gupaoedu-vip-mall/mall-util/mall-service-dependency/pom.xml
+++ b/gupaoedu-vip-mall/mall-util/mall-service-dependency/pom.xml
@@ -45,6 +45,14 @@
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
         </dependency>
+
+<!--        &lt;!&ndash;knife4j&ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>com.github.xiaoymin</groupId>-->
+<!--            <artifactId>knife4j-spring-boot-starter</artifactId>-->
+<!--            <version>2.0.2</version>-->
+<!--        </dependency>-->
+
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
